Сверстал блок features

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,5 +24,25 @@
             <button type="submit" class="page-header_phone-button">Заказать звонок</button>
         </div>
     </header>
+    <main class="page-main">
+        <section class="features">
+            <div class="features_desc-wrapper">
+                <h1 class="features_title">НЕДВИЖИМОСТЬ <br> <span class="features_title-small">в Объединенных Арабских Эмиратах</span></h1>
+                <h2 class="features_subtitle">Лучшая инвестиция!</h2>
+                <p class="features_desc">Компания <span>Golden Property Soulution</span> предлагает подбор и продажу инвестиционной недвижимости</p>
+                <p class="features_text">В РАССРОЧКУ НА 3-5 ЛЕТ!</p>
+            </div>
+            <form action="#" class="features_form">
+                <h3 class="features_form-title">Получите <br> <span class="features_form-small">консультацию специалиста</span></h3>
+                <p class="features_form-text">по недвижимости в Дубае</p>
+
+                <div class="features_form-wrapper">
+                    <input type="text" class="features_form-input" placeholder="Введите имя">
+                    <input type="tel" class="features_form-input" placeholder="Введите телефон">
+                </div>
+                <button type="submit" class="features_form-button">Получить консультацию</button>
+            </form>
+        </section>
+    </main>
 </body>
 </html>
