Верстка блока benefits

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -43,6 +43,37 @@
                 <button type="submit" class="features_form-button">Получить консультацию</button>
             </form>
         </section>
+        <section class="benefits">
+            <fieldset class="benefits_wrapper">
+                <legend class="benefits_title">Наши преимущества</legend>
+                <ul class="benefits_list">
+                    <li class="benefits_item benefit">
+                        <img src="/img/benefit-1.svg" width="80" height="80" alt="Bitcoin" class="benefit_image">
+                        <p class="benefit_text">Принимаем <br> Bitcoin</p>
+                    </li>
+                    <li class="benefits_item benefit">
+                        <img src="/img/benefit-2.svg" width="80" height="80" alt="Рассрочка" class="benefit_image">
+                        <p class="benefit_text">Рассрочка <br> на 3-5 лет</p>
+                    </li>
+                    <li class="benefits_item benefit">
+                        <img src="/img/benefit-3.svg" width="80" height="80" alt="Управление недвижимостью" class="benefit_image">
+                        <p class="benefit_text">Управление недвижимостью <br> после покупки</p>
+                    </li>
+                    <li class="benefits_item benefit">
+                        <img src="/img/benefit-4.svg" width="80" height="80" alt="Доход" class="benefit_image">
+                        <p class="benefit_text">Инвестиционный доход <br> до 15% годовых</p>
+                    </li>
+                    <li class="benefits_item benefit">
+                        <img src="/img/benefit-5.svg" width="80" height="80" alt="Виза" class="benefit_image">
+                        <p class="benefit_text">Получение резидентской <br> визы на 2 года</p>
+                    </li>
+                    <li class="benefits_item benefit">
+                        <img src="/img/benefit-6.svg" width="80" height="80" alt="Кредит" class="benefit_image">
+                        <p class="benefit_text">Возможность взять кредит <br> в банках Дубая</p>
+                    </li>
+                </ul>
+            </fieldset>
+        </section>
     </main>
 </body>
 </html>
