Верстка блока realty

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -74,6 +74,45 @@
                 </ul>
             </fieldset>
         </section>
+        <section class="realty">
+            <h2 class="realty_title">Виды недвижимости, которые мы продаем</h2>
+            <ul class="realty_list">
+                <li class="realty_item">
+                    <a href="#" class="realty_link">
+                        <img src="/img/realty-1.jpg" alt="Фото объекта" class="realty_image">
+                        <button class="realty_button">Узнать подробнее</button>
+                    </a>
+                </li>
+                <li class="realty_item">
+                    <a href="#" class="realty_link">
+                        <img src="/img/realty-2.jpg" alt="Фото объекта" class="realty_image">
+                        <p class="realty_text">Апартаменты</p>
+                        <button class="realty_button">Узнать подробнее</button>
+                    </a>
+                </li>
+                <li class="realty_item">
+                    <a href="#" class="realty_link">
+                        <img src="/img/realty-3.jpg" alt="Фото объекта" class="realty_image">
+                        <p class="realty_text">Пентхаусы</p>
+                        <button class="realty_button">Узнать подробнее</button>
+                    </a>
+                </li>
+                <li class="realty_item">
+                    <a href="#" class="realty_link">
+                        <img src="/img/realty-4.jpg" alt="Фото объекта" class="realty_image">
+                        <p class="realty_text">Таунхаусы</p>
+                        <button class="realty_button">Узнать подробнее</button>
+                    </a>
+                </li>
+                <li class="realty_item">
+                    <a href="#" class="realty_link">
+                        <img src="/img/realty-5.jpg" alt="Фото объекта" class="realty_image">
+                        <p class="realty_text">Виллы</p>
+                        <button class="realty_button">Узнать подробнее</button>
+                    </a>
+                </li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
