Верстка блока statistic

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -113,6 +113,26 @@
                 </li>
             </ul>
         </section>
+        <section class="statistic">
+            <h2 class="statistic_title">Усредненные данные по инвестициям <br> в недвижимость Дубая</h2>
+            <ul class="statistic_list">
+                <li class="statistic_item">
+                    <p class="statistic_desc">Первый <br> взнос</p>
+                    <p class="statistic_percent"><span>от</span> 5%</p>
+                    <p class="statistic_text">стоимости <br> недвижимости</p>
+                </li>
+                <li class="statistic_item">
+                    <p class="statistic_desc">Средний <br> ROI</p>
+                    <p class="statistic_percent">10%</p>
+                    <p class="statistic_text">годовых</p>
+                </li>
+                <li class="statistic_item">
+                    <p class="statistic_desc">Рост стоимости <br> недвижимости</p>
+                    <p class="statistic_percent"><span>от</span> 10%</p>
+                    <p class="statistic_text">годовых</p>
+                </li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
