Верстка блока consultation

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -133,6 +133,15 @@
                 </li>
             </ul>
         </section>
+        <section class="consultation">
+            <h2 class="consultation_title">Получите консультацию специалиста</h2>
+            <p class="consultation_text">по недвижимости в Дубае</p>
+            <form action="#" class="consultation_form">
+                <input type="text" class="consultation_form-input" placeholder="Имя">
+                <input type="tel" class="consultation_form-input" placeholder="Номер телефона">
+                <button type="submit" class="consultation_form-button">Отправить</button>
+            </form>
+        </section>
     </main>
 </body>
 </html>
